fixed prev/next links and not aligned btns

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -4512,6 +4512,7 @@ br.big {
         margin: 0 auto 10px;
     }
     .maincard img {
+        width: 56px;
         display: inline-block;
         margin: 0 28px 0 0;
         vertical-align: top;
